[feature/10-create-employer-endpoint] employer and admin controllers added
