# controllers/adminController.js
@@ -1,4 +1,6 @@
 const User = require('../models/user')
+const FoodCard = require('../models/foodCard')
+const OnlineOrder = require('../models/onlineOrder')
 const catchAsyncErrors = require('../middlewares/catchAsyncErrors')
 const ErrorHandler = require('../utils/errorHandler')
 
@@ -53,5 +55,82 @@ exports.deleteUser = catchAsyncErrors(async (req, res, next) => {
     res.status(200).json({
         success: true,
         message: `${user.name} deleted successfully`,
+    })
+})
+
+exports.createFoodCard = catchAsyncErrors(async (req, res, next) => {
+    const checkFoodCard = await FoodCard.findOne({ name: req.body.name })
+    if (checkFoodCard) {
+        return next(new ErrorHandler("There is a food card with that name ", 400))
+    }
+    await FoodCard.create(req.body)
+
+    res.status(200).json({
+        success: true,
+        message: `${req.body.name} food card created`,
+    })
+})
+
+exports.getFoodCards = catchAsyncErrors(async (req, res, next) => {
+    const foodCards = await FoodCard.find()
+
+    res.status(200).json({
+        success: true,
+        message: null,
+        length: foodCards.length,
+        data: foodCards
+    })
+})
+
+exports.deleteFoodCard = catchAsyncErrors(async (req, res, next) => {
+    const checkFoodCard = await FoodCard.findById(req.params.foodCardId)
+    if (!checkFoodCard) {
+        return next(new ErrorHandler("There is no food card with that id ", 400))
+    }
+
+    await FoodCard.findByIdAndDelete(req.params.foodCardId)
+
+    res.status(200).json({
+        success: true,
+        message: "Food card deleted successfully",
+    })
+})
+
+
+exports.createOnlineOrder = catchAsyncErrors(async (req, res, next) => {
+    const checkOnlineOrder = await OnlineOrder.findOne({ name: req.body.name })
+    if (checkOnlineOrder) {
+        return next(new ErrorHandler("There is a food card with that name ", 400))
+    }
+    await OnlineOrder.create(req.body)
+
+    res.status(200).json({
+        success: true,
+        message: `${req.body.name} online order created`,
+    })
+})
+
+exports.getOnlineOrders = catchAsyncErrors(async (req, res, next) => {
+    const onlineOrders = await OnlineOrder.find()
+
+    res.status(200).json({
+        success: true,
+        message: null,
+        length: onlineOrders.length,
+        data: onlineOrders
+    })
+})
+
+exports.deleteOnlineOrder = catchAsyncErrors(async (req, res, next) => {
+    const checkOnlineOrder = await OnlineOrder.findById(req.params.onlineOrderId)
+    if (!checkOnlineOrder) {
+        return next(new ErrorHandler("There is no online order object with that id ", 400))
+    }
+
+    await OnlineOrder.findByIdAndDelete(req.params.onlineOrderId)
+
+    res.status(200).json({
+        success: true,
+        message: "Online order deleted successfully",
     })
 })
