# controllers/commentController.js
@@ -24,8 +24,12 @@ exports.createComment = catchAsyncErrors(async (req, res, next) => {
         return next(new ErrorHandler('Cafe not found', 404))
     }
 
-    if (cafe.owner == req.user.id || cafe.employees.includes(req.user.id)) {
-        return next(new ErrorHandler('Cafe employee or employees can not make comment', 400))
+    if (cafe.owner == req.user.id) {
+        return next(new ErrorHandler('Cafe employer can not make comment', 400))
+    }
+
+    if (!cafe.employees.some(employee => employee.user == req.user.id)) {
+        return next(new ErrorHandler('Cafe employee can not make comment', 400))
     }
 
     const { error } = createCommentBodyValidation(req.body)
