# models/employee.js
@@ -1,7 +1,6 @@
-const { required } = require('joi')
 const mongoose = require('mongoose')
-const Cafe = require('./cafe')
-const User = require('./user')
+const User = require("./user")
+const Cafe = require("./cafe")
 
 const employeeSchema = new mongoose.Schema({
     cafe: {
@@ -26,43 +25,15 @@ const employeeSchema = new mongoose.Schema({
 
 employeeSchema.pre('save', async function () {
     try {
-        // Find the user document and update its posts array with the new post
+        await User.findByIdAndUpdate(this.user, { $push: { role: "employee" }, $set: { cafe: this.cafe, employee: this._id } }, { new: true })
         await Cafe.findByIdAndUpdate(
             this.cafe,
             { $push: { employees: this._id } },
             { new: true }
         );
-
-        await User.findByIdAndUpdate(
-            this.user,
-            { $push: { role: "employee" }, $set: { cafe: this.cafe } },
-            { new: true }
-        );
-
     } catch (err) {
         console.error(err);
     }
 })
-
-employeeSchema.pre('remove', async function () {
-    try {
-        // Find the user document and update its posts array with the new post
-        await Cafe.findByIdAndUpdate(
-            this.cafe,
-            { $pull: { employees: this._id } },
-            { new: true }
-        );
-
-        await User.findByIdAndUpdate(
-            this.user,
-            { $pull: { role: "employee" }, $set: { cafe: null } },
-            { new: true }
-        );
-
-    } catch (err) {
-        console.error(err);
-    }
-})
-
 
 module.exports = mongoose.model('Employee', employeeSchema, 'employee')
